# notebooks

./: .gitattributes  .gitignore  LICENSE  README.rst  conf.py  index.rst  requirements.txt  setup.cfg  tox.ini
.github/: dependabot.yml
Bexvar/: Bexvar tutorial.ipynb
Bispectrum/: bispectrum_tutorial.ipynb
Cospectra/: Cospectra.ipynb
CrossCorrelation/: cross_correlation_notebook.ipynb
Crossspectrum/: Crossspectrum_tutorial.ipynb
DataQuickLook/: Quicklook NuSTAR data with Stingray.ipynb
Deadtime/: Check FAD correction in Stingray.ipynb  Check dead time algorithm in Stingray.ipynb  Check dead time model in Stingray.ipynb  Dead time model in Stingray.ipynb  FAD correction in Stingray.ipynb
Debug/: New normalization formulas are consistent.ipynb
DynamicalPowerspectrum/: DynamicalPowerspectrum_tutorial_[fake_data].ipynb  DynamicalPowerspectrum_tutorial_[real_data].ipynb
EventList/: EventList Tutorial.ipynb
LAXPC analysis/: laxpc_analysis.ipynb
Lightcurve/: Analyze light curves chunk by chunk - an example.ipynb  JWST_lightcurve.ipynb  Lightcurve tutorial.ipynb  hlsp_tess-spoc_tess_phot_0000000280773136-s0037_tess_v1_lc.fits  jwst_light_curve.ipynb  photon_arrivals.txt  tess_light_curve.ipynb
Lomb Scargle/: LombScarglePowerspectrum_tutorial.ipynb
LombScargle/: LombScargleCrossspectrum_tutorial.ipynb  LombScarglePowerspectrum_tutorial.ipynb  Very slow variability with Lomb-Scargle methods.ipynb
Modeling/: ModelingExamples.ipynb
Multitaper/: koi2133.csv  multitaper_example.ipynb
Performance/: Dealing with large data files.ipynb
docs/: index.rst
(+42 files in other folders)
