[metadata]
name = stingray
author = Stingray Developers
author_email = spectraltiming-stingray@googlegroups.com
license = MIT
license_file = LICENSE.rst
url = https://docs.stingray.science
description = Time Series Methods For Astronomical X-ray Data
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = StingraySoftware/stingray
